apps/etshub/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: etshub
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: contour
  tls:
    - secretName: etshub-tls
      hosts:
        - etshub.prodv2.cedille.club
  rules:
    - host: etshub.prodv2.cedille.club
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: etshub-svc
                port:
                  number: 80
